# openpilot

./: .gitignore  .pre-commit-config.yaml  README.md
cereal/: log.capnp
cereal/messaging/: __init__.py
common/: clock.pyx
remnav/: CMakeLists.txt  CompilerOptions.cmake  go.mod  go.sum
remnav/audio/: CMakeLists.txt
remnav/audio/src/: CMakeLists.txt  arg_parser.h  audio_logger.cpp  audio_logger.h  dbg_utils.h  fifo_get_intf.h  fifo_put_intf.h  pcm_config.h  raw_buffer.h  ts_fifo.h  udp_client_exception.h  udp_server_exception.h
remnav/audio/src/lnx/: CMakeLists.txt  lnx_base_device.cpp  lnx_base_device.h  lnx_microphone.cpp  lnx_microphone.h  lnx_speaker.cpp  lnx_speaker.h  lnx_udp_client.cpp  lnx_udp_client.h  lnx_udp_microphone_client.cpp  lnx_udp_server.cpp  lnx_udp_server.h  lnx_udp_speaker_client.cpp
remnav/audio/src/win/: CMakeLists.txt  win_audio_buffer.h  win_microphone.cpp  win_microphone.h  win_speaker.cpp  win_speaker.h  win_udp_client.cpp  win_udp_client.h  win_udp_microphone_client.cpp  win_udp_server.cpp  win_udp_server.h  win_udp_speaker_client.cpp  win_utils.h
remnav/audio/tests/: CMakeLists.txt  lnx_microphone_test.cpp  lnx_speaker_test.cpp  win_microphone_test.cpp  win_speaker_test.cpp
remnav/audio/unit_tests/: CMakeLists.txt  test_arg_parser.cpp  test_ts_fifo.cpp
remnav/bridge/: rn1-bridge.py
remnav/cmd/bididial/: bididial.go
remnav/cmd/bididup/: bididup.go
remnav/cmd/bidilisten/: bidilisten.go
remnav/cmd/bidiwr/: bidiwr.go
remnav/cmd/dialstate/: dialstate.go
remnav/cmd/g920echo/: README.md  g920echo.go
remnav/cmd/g920listen/: g920listen.go
remnav/cmd/gpsdlisten/: gpsdlisten.go
remnav/cmd/gpsdrt/: gpsdrt.go
remnav/cmd/plnr/: README.md  plnr.go
remnav/cmd/trajecho/: trajecho.go
remnav/cmd/trajmock/: trajmock.go
remnav/cmd/trjecho/: README.md  trjecho.go
remnav/cmd/trjmock/: trjmock.go
remnav/cmd/udpdial/: udpdial.go
remnav/cmd/udpdup/: udpdup.go
remnav/cmd/udplisten/: udplisten.go
remnav/cmd/udplistener/: udplistener.go
remnav/docs/: DirStructure.md
remnav/g920/: g920.go  hid.go
remnav/g920/cmd/enumerate/: enumerate.go
remnav/g920/cmd/g920rdr/: g920rdr.go
remnav/hid/: hid.go
remnav/hid/cmd/hidrdr/: hidrdr.go
remnav/log/: log.go
remnav/logger/: CMakeLists.txt  audiolog.capnp  log.capnp
remnav/logger/include/: msg_logger.h
remnav/logger/src/: lnx_msg_logger.cpp  win_msg_logger.cpp
remnav/logger/tests/: CMakeLists.txt  test_logger.cpp
remnav/metadata/: README.md  experiment_config.json  schema.sql
remnav/metadata/analysis/3csv21/: 3csv21.c
remnav/metadata/analysis/brm/: brm.c
remnav/metadata/analysis/mini_vq_filter/: mini_vq_filter.c
remnav/metadata/analysis/occ/: occ.c
remnav/metadata/analysis/vq_f/: fcc_asr.py  seg3_analysis.py  support.py  vqf.py
remnav/metadata/analysis/vq_filter/: vq_filter.c
remnav/metadata/analysis/wats_coverage/: wats.c
remnav/metadata/cmd/dedup_root/: README.md  dedup_root.go
remnav/metadata/cmd/filter/: filter.go
remnav/metadata/cmd/gpsd/: README.md  gpsd.go  mapgpsd.py  mapit.py
remnav/metadata/cmd/gpsdconcat/: README.md  gpsdconcat.go  test.sh
remnav/metadata/cmd/gpsdol/: README.md  gpsd.socket  gpsdol.go  test.json
remnav/metadata/cmd/gpsdrt/: gpsdrt.go
remnav/metadata/cmd/sessionid/: README.md  sessionid.go  sessionid.sh
remnav/metadata/cmd/tcplistener/: tcplistener.go
remnav/metadata/cmd/udpdedup/: go.mod  udpdedup.go
remnav/metadata/docs/: README.md  applications.excalidraw
remnav/metadata/experiment/: README.md  experiment.go  experiment.json  go.mod
remnav/metadata/experimentconfig/: experimentconfig.go  go.mod
remnav/metadata/gpsd/: README.md  concat.go  concat_test.go  gpsd.go  gpsd.rn3_g000.json  gpsd.rn6.nonl_g000.json  gpsd_test.go  interpolate.go  interpolate_test.go  log.go  watch.go
remnav/metadata/launcher/: go.mod  launcher.go
remnav/metadata/mock/: files.go  files.json  go.mod
remnav/metadata/obsolete/: README.md
remnav/metadata/obsolete/cmd/dedup_root/: dedup.sh  dedup_root.go
remnav/metadata/obsolete/experiment/: experiment.json
remnav/metadata/obsolete/mock/: README.md  files.go
remnav/metadata/obsolete/rnlaunch/: README.md  gnss_client.sh  video_sender.sh
remnav/metadata/obsolete/sqlite3/: README.md
remnav/metadata/rnlaunch/: go.mod  rnlaunch.go  video_sender.sh
remnav/metadata/sqlite3/: db.go  go.mod
remnav/metadata/storage/: go.mod  ids.go  schema.go  storage.go  walker.go
remnav/metadata/storage/obsolete/: walker.go
remnav/net/: bidi.go  dedup.go  dedup_test.go  dup.go  heartbeat.go  net.go  port.go  port.h  port.py  portassignments.py
remnav/trajectory/: mock.go  mock_test.go  parameters_test.go  planner.go  testParams.json  testParamsInterval.json  testParamsNL.json  trajectory.go  trajectory_coordinates.ipynb  vehicle_mock.go  vehicle_mock_test.go
remnav/trajectory/cmd/log2csv/: README.md  log2csv.go
remnav/trajectory/cmd/plnrmock/: plnrmock.go
remnav/utils/logger/: CMakeLists.txt  print_audio_log.cpp  print_audio_log.py  requirements.txt
selfdrive/controls/: controlsd.py  pedal_hijacker.py  pedal_mapper.py  remnav_vc.py  vc-test.py
selfdrive/locationd/: paramsd.py
(+37 files in other folders)
